tutorial extended with ViewTransitions

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,7 +28,7 @@ const skillColor = "navy";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <BaseLayout>
+        <BaseLayout  pageTitle={pageTitle}>
             <p>Here are a few facts about me:</p>
             <ul>
                 <li>My name is {identity.firstName}.</li>
