--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,7 +12,7 @@ const pageTitle = "My astro Learning Blog";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <BaseLayout>
+    <BaseLayout pageTitle={pageTitle}>
         <p>This is where I will post about my journey learning Astro.</p>
         <ul>
             {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
